[gd_scene load_steps=11 format=2]

[ext_resource path="res://Map/Parent/MapParentScript.gd" type="Script" id=1]
[ext_resource path="res://Object/BoundingArea/BoundingArea.tscn" type="PackedScene" id=2]
[ext_resource path="res://Object/Component/Camera2D.tscn" type="PackedScene" id=3]
[ext_resource path="res://Object/GroundEntitySpawnPositions/GroundEntitySpawnPositions.tscn" type="PackedScene" id=4]
[ext_resource path="res://Object/Portal/Portal.tscn" type="PackedScene" id=5]
[ext_resource path="res://Object/WeaponSelectionArea/WeaponSelectionArea.tscn" type="PackedScene" id=6]
[ext_resource path="res://Object/EnemySpawnManager/EnemySpawnManager.tscn" type="PackedScene" id=7]
[ext_resource path="res://Assate/Font/Kenney Blocks.ttf" type="DynamicFontData" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 320, 10 )

[sub_resource type="DynamicFont" id=2]
size = 8
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 8 )

[node name="MapParentScene" type="Node2D" groups=["Map"]]
script = ExtResource( 1 )

[node name="BoundingArea" parent="." instance=ExtResource( 2 )]
position = Vector2( 304, 368 )
respawn_position = NodePath("../PlayerSpawnPosition")

[node name="CollisionShape2D" type="CollisionShape2D" parent="BoundingArea"]
shape = SubResource( 1 )

[node name="Camera2D" parent="." instance=ExtResource( 3 )]
current = true

[node name="GroundEntitySpawnPositions" parent="." instance=ExtResource( 4 )]

[node name="Position2D" type="Position2D" parent="GroundEntitySpawnPositions"]
position = Vector2( 68, 270 )

[node name="Position2D2" type="Position2D" parent="GroundEntitySpawnPositions"]
position = Vector2( 217, 302 )

[node name="Position2D3" type="Position2D" parent="GroundEntitySpawnPositions"]
position = Vector2( 287, 302 )

[node name="Position2D4" type="Position2D" parent="GroundEntitySpawnPositions"]
position = Vector2( 359, 286 )

[node name="Position2D5" type="Position2D" parent="GroundEntitySpawnPositions"]
position = Vector2( 531, 254 )

[node name="PlayerSpawnPosition" type="Position2D" parent="."]
position = Vector2( 224, 288 )

[node name="CollidingGround" type="TileMap" parent="."]
cell_size = Vector2( 16, 16 )
collision_mask = 0
format = 1

[node name="WeaponSelectionArea" parent="." instance=ExtResource( 6 )]
position = Vector2( 304, 224 )

[node name="EnemySpawnManager" parent="." instance=ExtResource( 7 )]

[node name="Portal" parent="." instance=ExtResource( 5 )]

[node name="HUD" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 612, 360 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="HUD"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -76.0
margin_bottom = 360.0
grow_horizontal = 0
grow_vertical = 0
rect_pivot_offset = Vector2( 76, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KillText" type="Label" parent="HUD/HBoxContainer"]
margin_top = 348.0
margin_right = 62.0
margin_bottom = 360.0
size_flags_horizontal = 3
size_flags_vertical = 8
custom_colors/font_color = Color( 0.384314, 1, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Totle Kill :"

[node name="KillCount" type="Label" parent="HUD/HBoxContainer"]
margin_left = 66.0
margin_top = 348.0
margin_right = 78.0
margin_bottom = 360.0
size_flags_horizontal = 3
size_flags_vertical = 8
custom_colors/font_color = Color( 0.384314, 1, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "00"

[node name="Margin" type="Label" parent="HUD/HBoxContainer"]
margin_left = 82.0
margin_top = 348.0
margin_right = 86.0
margin_bottom = 360.0
size_flags_vertical = 8
custom_colors/font_color = Color( 0.384314, 1, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "  "

[node name="EnemyText" type="Label" parent="HUD/HBoxContainer"]
margin_left = 90.0
margin_top = 348.0
margin_right = 162.0
margin_bottom = 360.0
size_flags_horizontal = 3
size_flags_vertical = 8
custom_colors/font_color = Color( 0.384314, 1, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Totle Enemy : "

[node name="EnemyCount" type="Label" parent="HUD/HBoxContainer"]
margin_left = 166.0
margin_top = 348.0
margin_right = 178.0
margin_bottom = 360.0
size_flags_horizontal = 3
size_flags_vertical = 8
custom_colors/font_color = Color( 0.384314, 1, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "00"

[connection signal="selection_period_ended" from="WeaponSelectionArea" to="." method="_on_WeaponSelectionArea_selection_period_ended"]
